src/test/deca/context/invalid/resultats/test6_op_bool3-cont.res
./src/test/deca/context/invalid/test6_op_bool3.deca:17:1: The types are incompatible for a Boolean Operation
